# kuhn_poker_head_to_head

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: escher_experiment_13_head_to_head.json
docs/: GCP_BATCH_EXPERIMENTS.md
gcp/: submit_batch_experiment.sh
kuhn_head_to_head/: __init__.py  analysis.py  config.py  dependencies.py  io_utils.py  plotting.py  run.py  training.py
scripts/: upload_outputs_to_gcs.py
tests/: test_analysis_aggregate.py  test_config.py
