[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "kuhn-poker-head-to-head"
version = "0.1.0"
description = "Head-to-head Kuhn poker comparison of Deep CFR, DREAM, and ESCHER thesis entrants."
requires-python = ">=3.9"
dependencies = [
  "matplotlib>=3.7,<4.0",
  "numpy>=1.24,<2.0",
  "pandas>=2.0,<3.0",
  "scipy>=1.10,<2.0",
  "torch>=2.0,<3.0",
  "tensorflow>=2.15,<2.16",
  "open_spiel>=1.4",
]

[project.optional-dependencies]
dev = ["pytest"]

[tool.setuptools.packages.find]
include = ["kuhn_head_to_head*"]
